<resources>
    <string name="app_name">Foodemy</string>
    <string name="intro_text">Welcome to Foodemy, the app that suggests recipes based on your available leftovers!</string>
    <string name="ingredient_input">Input Ingredient</string>
    <string name="saved_recipes">View Saved Recipes</string>

    <string name="drawer_menu_label_home">Home</string>
    <string name="drawer_menu_label_shopping_list">Shopping List</string>
    <string name="drawer_menu_label_show_favourites">Show Favourites</string>
    <string name="drawer_menu_label_nearby_shops">Nearby Shops</string>
    <string name="drawer_menu_label_input_ingredients">Input Ingredients</string>

    <string name="drawer_header_text">Foodemy</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="find_shops">View Nearby Shops</string>
    <string name="title_activity_find_shops_maps">Map</string>
    <string name="google_maps_apiKey">***REMOVED***</string>
    <string name="show_single_recipe">Show Single Recipe</string>
    <string name="open_shopping_cart">Open Shopping Cart</string>

    <string name="description">Description: </string>
    <string name="about">About</string>
    <string name="loading_about">Loading about…</string>
    <string name="loading_instructions">Loading Instructions</string>
    <string name="instructions">Instructions</string>
    <string name="camera_permission_ok">Camera Permission Granted</string>
    <string name="camera_permission_denied">Sorry, you need to allow access to Camera to use this feature.</string>
    <string name="recipe_results">Recipe results</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="insert">Insert</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="error_api_message">Make sure your internet connection is working or try again later...</string>
    <string name="used_ingredients">Used Ingredients</string>
    <string name="missing_ingredients">Missing Ingredients</string>
    <string name="click_to_add_to_cart">(Click to add to cart)</string>
    <string name="did_you_know_that_you_can_click_on_the_camera_icon_to_let_the_app_find_the_ingredients_using_your_camera">Did you know that you can click on the camera icon to let the app find the ingredients using your camera?</string>
    <string name="loading">...</string>
    <string name="share">Share</string>
    <string name="like">like</string>
    <string name="find_nearby_shops">Find Nearby Shops</string>
    <string name="input_your_ingredients_below_and_hit_search_to_begin">Input your ingredients below and hit search to begin!</string>
    <string name="get_started_button">Get Started</string>

</resources>
