<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior= "single" >
        <item
            android:id = "@+id/nav_home"
            android:title = "@string/drawer_menu_label_home" />

        <item
            android:id = "@+id/nav_recipes"
            android:title = "@string/drawer_menu_label_input_ingredients" />

        <item
            android:id="@+id/nav_nearby_shops"
            android:title="@string/drawer_menu_label_nearby_shops" />
        <item
            android:id = "@+id/nav_favourites"
            android:title = "@string/drawer_menu_label_show_favourites" />
        <item
            android:id = "@+id/nav_shoppingList"
            android:title = "@string/drawer_menu_label_shopping_list" />

    </group>

</menu>