<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_ingredient"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/insertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/insert" />

        <Button
            android:id="@+id/insertPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/photo" />



    </LinearLayout>

    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/flowLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayout"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">




    </org.apmem.tools.layouts.FlowLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flowLayout"
        android:visibility="gone"
        android:text="@string/search" />

    <TextView
        android:id="@+id/recipeListHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:text="@string/recipe_results"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipes"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchButton" />

</RelativeLayout>