<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="20dp"
          android:orientation="vertical">
            <TextView
              android:id="@+id/RecipeDisplayText"
              android:layout_width="fill_parent"
              android:layout_height="65dp"
              android:layout_marginTop="50dp"
              android:layout_marginBottom="50dp"
              android:autoSizeMaxTextSize="30sp"
              android:autoSizeMinTextSize="25sp"
              android:autoSizeTextType="uniform"
              android:fontFamily="@font/cambay"
              android:gravity="center"
              android:lineSpacingExtra="-15sp"
              android:text="Almond Cake"
              android:textColor="@android:color/black"
              android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginTop="10dp"
          android:orientation="horizontal">
            <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:orientation="vertical">
                <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:orientation="horizontal">
                    <ImageView
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:src="@drawable/ic_timer_black_24dp" />
                    <TextView
                      android:id="@+id/timeToCook"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:layout_marginLeft="5dp"
                      android:text="@string/loading" />
                </LinearLayout>
                <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:orientation="horizontal">
                    <ImageView
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:src="@drawable/ic_people_outline_black_24dp" />
                    <TextView
                      android:id="@+id/servings"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:layout_marginLeft="5dp"
                      android:text="@string/loading" />
                </LinearLayout>
                <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:orientation="horizontal">
                    <ImageView
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:src="@drawable/ic_sprout_outline" />
                    <TextView
                      android:id="@+id/vegetarian"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:layout_marginLeft="5dp"
                      android:text="@string/loading" />
                </LinearLayout>
                <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
                    <ImageView
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:src="@drawable/ic_attach_money_black_24dp" />
                    <TextView
                      android:id="@+id/costRating"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:layout_marginStart="5dp"
                      android:text="@string/loading" />
                </LinearLayout>
            </LinearLayout>
            <androidx.cardview.widget.CardView
              android:id="@+id/recipe_image_holder"
              android:layout_width="180dp"
              android:layout_height="133dp"
              android:elevation="10dp"
              app:cardCornerRadius="8dp">
                <ImageView
                  android:id="@+id/recipeImage"
                  android:layout_width="180dp"
                  android:layout_height="133dp"
                  android:adjustViewBounds="true"
                  android:contentDescription="contains the image of the recipe"
                  android:scaleType="fitCenter"
                  android:src="@drawable/sampleimage" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:orientation="horizontal">
            <View
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1" />
            <com.google.android.material.button.MaterialButton
              android:id="@+id/share_button"
              style="@style/Widget.MaterialComponents.Button.OutlinedButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="20dp"
              android:textSize="9sp"
              app:iconSize="12dp"
              android:width="100dp"
              android:minHeight="40dp"
              android:minWidth="40dp"
              android:text="@string/share"
              android:textColor="@android:color/black"
              app:icon="@drawable/ic_share_black_24dp"
              app:iconGravity="start"
              app:iconTint="@android:color/darker_gray" />
            <com.google.android.material.button.MaterialButton
              android:id="@+id/like_button"
              style="@style/Widget.MaterialComponents.Button.OutlinedButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="5dp"
              android:textSize="9sp"
              app:iconSize="12dp"
              android:minHeight="40dp"
              android:minWidth="40dp"
              android:width="100dp"
              android:text="@string/like"
              android:textColor="@android:color/black"
              app:icon="@drawable/ic_heart_multiple"
              app:iconGravity="start"
              app:iconTint="@android:color/darker_gray"
              tools:ignore="SmallSp" />
        </LinearLayout>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:textColor="@color/black"
          android:layout_marginTop="30dp"
          android:fontFamily="@font/cambay"
          android:text="@string/used_ingredients"
          android:textSize="19sp" />
        <HorizontalScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:scrollbars="none">
            <LinearLayout
              android:id="@+id/used_ingredients_layout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal" />
        </HorizontalScrollView>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="30dp"
              android:fontFamily="@font/cambay"
              android:text="@string/missing_ingredients"
              android:textColor="@color/black"
              android:textSize="19sp" />
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="30dp"
              android:layout_marginBottom="20dp"
              android:text="@string/click_to_add_to_cart"
              android:textColor="@android:color/holo_orange_light" />
        </LinearLayout>
        <HorizontalScrollView
          android:scrollbars="none"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
            <LinearLayout
              android:orientation="horizontal"
              android:id="@+id/missing_ingredients_layout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
        </HorizontalScrollView>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="30dp"
          android:fontFamily="@font/cambay"
          android:textColor="@color/black"
          android:text="@string/instructions"
          android:textSize="19sp" />
        <TextView
          android:id="@+id/instructions"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:text="@string/loading_instructions" />
    </LinearLayout>
</ScrollView>